[package]
name = "bevy_deepzoom"
version = "0.0.5"
edition = "2021"
description = "Deep Zoom Image (DZI) tile streaming Bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bevy_deepzoom"
repository = "https://github.com/liamaharon/bevy_deepzoom"
homepage = "https://github.com/liamaharon/bevy_deepzoom"
keywords = ["bevy", "deepzoom", "dzi", "tiles", "image"]
categories = ["rendering"]
exclude = ["readme-screencap.gif"]

[dependencies]
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.226", default-features = false, features = [
  "alloc",
  "derive",
] }
bevy = { version = "0.19", default-features = false, features = [
  "std",
  "async_executor",
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_image",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_window",
  "reflect_auto_register",
] }

[dev-dependencies]
bevy = { version = "0.19", default-features = false, features = [
  "std",
  "async_executor",
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_input_focus",
  "bevy_log",
  "bevy_picking",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "ui_picking",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "https",
  "jpeg",
  "reflect_auto_register",
  "web",
  "webgpu",
] }
